--- a/css/styles.css
+++ b/css/styles.css
@@ -13,17 +13,21 @@ body {
   font-family: "OpenSans", sans-serif;
   src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
   font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "OpenSans", sans-serif;
   src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
   font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 .header {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg);
-  background-position: center;
+  background-image: url("../images/banner-bg.jpg");
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 450px;
@@ -63,12 +67,9 @@ body {
   justify-content: space-between;
 }
 
-.menu-logo {
-  margin-top: -10px;
-  width: 180px;
-}
-
 .menu-logo-link {
+  margin-top: 10px;
+  width: 180px;
   text-decoration: none;
   z-index: 2;
 }
@@ -108,6 +109,51 @@ h1 {
   line-height: 75px;
   text-transform: uppercase;
   z-index: 2;
+}
+
+.wrapper  {
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+  
+  margin: 0 14px 16px 14px;
+  text-transform: uppercase;
+  border: 0px solid #b59f5b;
+  z-index: 2;
+  background-position: center;
+  justify-content: center;
+  text-align: left;
+  align-items: flex-end;
+}
+
+.trend-content {
+  width: 290px;
+  height: 100%;
+  padding: 30px; /* Поля вокруг изображения */
+  margin-top: 150px;
+  margin-bottom: 20px; /* Отступ снизу */
+  margin-left: -410px;
+  margin-right: 30px;
+  outline: 4px solid #b59f5b; /* Параметры рамки */
+}
+
+.trend-content-link {
+  text-decoration: none;
+  font-family: OpenSans, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  line-height: 24px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.hidden {
+  display: inline-block;
+  font-size: 18px;
+  text-align: center;
+  justify-content: center;
 }
 
 .main {
@@ -453,6 +499,79 @@ button:hover {
   display: inline-block;
   vertical-align: super;
   transition: transform 0.2s;
+}
+
+.shop {
+  display: inline-block;
+  position: relative;
+}
+
+.products-title {
+  position: absolute;
+  display: inline-block;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 10px;
+ 
+}
+.products-shop {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: cover;
+  gap: 25px;
+  justify-content: space-between;
+}
+
+p.sale-price {
+  margin-top: -70px;
+  margin-left: -15px;
+  width: 132px;
+  height: 22px;
+  
+}
+
+p.price {
+  margin-top: -5px;
+  margin-left: -205px;
+}
+
+.products-description a {
+  text-decoration: none;
+}
+
+.cart {
+  width: 150px;
+  height: 50px;
+  padding: 20px;
+  margin-left: 120px;
+  margin-top: 20px;
+}
+
+.products-bordered {
+  width: 316px;
+  height: 210px;
+  border: 3px solid #b59f5b;
+  padding: 25px 25px 25px 25px;
+  margin-top: -30px;
+  margin-bottom: 25px;
+}
+
+@media (min-width: 1201px) {
+    .image-1 {
+    background-image: url(../images/shop-item-desk1.jpg);
+  }
+  
+}
+@media (min-width: 641px), (max-width: 1200px) {
+  .image-1 {
+  background-image: url(../images/shop-item-tablet1.jpg);
+  }
+}
+
+@media (max-width: 640px) {
+  .image-1 {
+  background-image: url(../images/shop-item-mobile1.jpg);
+  }
 }
 
 .footer {
