--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 @font-face {
-  font-family: "OpenSans", sans-serif;
+  font-family: "OpenSans";
   src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
   font-weight: bold;
   font-style: normal;
@@ -23,7 +23,7 @@ body {
 }
 
 @font-face {
-  font-family: "OpenSans", sans-serif;
+  font-family: "OpenSans";
   src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
   font-weight: normal;
   font-style: normal;
@@ -116,6 +116,163 @@ h1 {
   z-index: 2;
 }
 
+.modal {
+  display: flex;
+  /* display:none; */
+  background-color: rgba(0, 0, 0, 0.6);
+  position:fixed;
+  
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.modal .modal-body{
+  background-color: rgba(255, 255, 255, 1);
+  width:450px;
+  height:700px;
+}
+.modal-question {
+  display: block;
+  padding-left: 10px;
+}
+
+/* для элемента input c type="radio" */
+.custom-radio>input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.modal-radio>input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+/* для элемента label связанного с .custom-radio */
+.custom-radio>span {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+
+.modal-radio>span {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+
+/* создание в label псевдоэлемента  before со следующими стилями */
+.custom-radio>span::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #b59f5b;
+  border-radius: 50%;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.modal-radio>span::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #b59f5b;
+  border-radius: 50%;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+/* стили при наведении курсора на радио */
+.custom-radio>input:not(:disabled):not(:checked)+span:hover::before {
+  border-color: #b59f5b;
+}
+
+.modal-radio>input:not(:disabled):not(:checked)+span:hover::before {
+  border-color: #b59f5b;
+}
+
+/* стили для активной радиокнопки (при нажатии на неё) */
+.custom-radio>input:not(:disabled):active+span::before {
+  background-color: #b59f5b;
+  border-color: #b59f5b;
+}
+
+.modal-radio>input:not(:disabled):active+span::before {
+  background-color: #b59f5b;
+  border-color: #b59f5b;
+}
+
+/* стили для радиокнопки, находящейся в фокусе */
+.custom-radio>input:focus+span::before {
+  box-shadow: 0 0 0 0.2rem  rgba(240, 196, 114, 0.774);
+}
+
+.modal-radio>input:focus+span::before {
+  box-shadow: 0 0 0 0.2rem  rgba(240, 196, 114, 0.774);
+}
+
+/* стили для радиокнопки, находящейся в фокусе и не находящейся в состоянии checked */
+.custom-radio>input:focus:not(:checked)+span::before {
+  border-color: #b59f5b;
+}
+
+.modal-radio>input:focus:not(:checked)+span::before {
+  border-color: #b59f5b;
+}
+
+
+/* стили для радиокнопки, находящейся в состоянии checked */
+.custom-radio>input:checked+span::before {
+  border-color: #b59f5b;
+  background-color: #b59f5b;;
+  
+}
+
+.modal-radio>input:checked+span::before {
+  border-color: #b59f5b;
+  background-color: #b59f5b;;
+  
+}
+
+/* стили для радиокнопки, находящейся в состоянии disabled */
+.custom-radio>input:disabled+span::before {
+  background-color: #e9ecef;
+}
+
+.modal-radio>input:disabled+span::before {
+  background-color: #e9ecef;
+}
+
+
+@media (min-width: 320px) {
+  h1 {
+    font-size: calc (3.125w + 10px);
+  }
+}
+
+@media (min-width: 960px) {
+  h1 {
+  font-size: 40px;
+  }
+}
+
+
 .wrapper  {
   display: flex;
   flex-wrap: wrap;
@@ -127,13 +284,12 @@ h1 {
   justify-content: center;
   text-align: left;
   align-items: flex-end;
+  
 }
-
 
 .image-opacity {
   position: relative;
 }
-
 
 .image-opacity::before {
   content: "";
@@ -143,7 +299,7 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: #666;
-  opacity: 0.6;
+  opacity: 0.5;
 }
 
 
@@ -156,7 +312,7 @@ h1 {
   min-height: 320px;
   max-width: 410px;  
   max-height: 320px;
-  /*width: calc(25%-4px);
+ /* width: calc(25%-10px)/4;
   min-height: 32rem;*/
   padding: 15px 20px;
  
@@ -169,13 +325,13 @@ h1 {
   
 }
 
-
-
+  
 .picture-trends-garden {
   display: flex;
   background-image: url("../images/trend1.jpg");
   /* max-width: 25%; */
   margin: 10px;
+
 }
 
 .picture-trends-cheese {
@@ -201,7 +357,7 @@ h1 {
 
 .trend-content-link {
   text-decoration: none;
-  font-family: OpenSans, sans-serif;
+  font-family: OpenSans;
   font-size: 24px;
   font-weight: bold;
   text-transform: uppercase;
@@ -211,7 +367,10 @@ h1 {
   padding-bottom: 0;
 }
 
-
+.products-title {
+  text-decoration: none;
+  color: #000;
+}
 
 
 .hidden {
@@ -283,7 +442,7 @@ ul {
 }
 
 .content {
-  font-family: OpenSans, sans-serif;
+  font-family: OpenSans;
 }
 
 .content-link {
@@ -333,12 +492,18 @@ p {
 aside {
   margin-top: 55px;
   width: 280px;
+  flex-grow: 1;
 }
 
-.aside-container{
-  width: 50%;
-  margin: 0 auto;
-  padding: 0;
+.main {
+  width: 100%;
+}
+
+@media (max-width:1200) {
+  aside {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .post-list {
@@ -442,7 +607,7 @@ nav {
   border: none;
   width: 15%;
   height: 40px;
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/search.svg);
+  background-image: url("..//svg/search.svg");
   background-size: 20px;
   background-position: center;
   margin-left: -4px;
@@ -584,6 +749,7 @@ button:hover {
 .products {
   display: flex;
   max-width: 1200px;
+  align-items: stretch;
 }
 
 /*
@@ -593,16 +759,42 @@ button:hover {
   flex-wrap: cover;
   gap: 25px;
   justify-content: space-between;
+}*/
+
+
+
+
+@media (max-width: 400px) {
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  flex-items: center;
+  }
 }
 
+.picture-trends {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  
+  /*justify-content: сenter;*/
+}
+  @media (max-width: 1010px) {
 
-.cart {
-  width: 150px;
-  height: 50px;
-  padding: 20px;
-  margin-right: 120px;
-  margin-top: 20px;
-}*/
+  }
+@media (max-width: 1600px) {
+  .grocery-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+  }
+}
+
+  .aside-container{
+    width: 50%;
+    margin: 0 auto;
+    padding: 0;
+  }
 
 .grocery-list {
   margin-right: 65px;
@@ -680,14 +872,14 @@ button:hover {
 }
 
 .dribbble {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/001-dribbble.svg);
+  background-image: url("..//svg/001-dribbble.svg");
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
 }
 
 .pinterest {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/002-pinterest.svg);
+  background-image: url("..//svg/001-pinterest.svg");
   background-repeat: no-repeat;
   margin-left: 30px;
   margin-right: 30px;
@@ -696,7 +888,7 @@ button:hover {
 }
 
 .twitter {
-  background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg);
+  background-image: url("..//svg/003-tumblr.svg");
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
@@ -708,4 +900,40 @@ button:hover {
   font-family: OpenSans, sans-serif;
   line-height: 40px;
   margin-top: 75px;
+}
+
+@media (min-width: 1201px) {
+  .image-1 {
+  background-image: url("../images/shop-item-desk1.jpg");
+  }
+  .image-2 {
+      background-image: url("../images/shop-item-desk2.jpg");
+  }
+  .image-3 {
+      background-image: url("../images/shop-item-desk3.jpg"); 
+  }
+}
+
+@media (min-width: 641px), (max-width: 1200px) {
+  .image-1 {
+      background-image: url("../images/shop-item-tablet1.jpg");
+  }
+  .image-2 {
+      background-image: url("../images/shop-item-tablet2.jpg");
+  }
+  .image-3 {
+      background-image: url("../images/shop-item-tablet3.jpg");
+  }
+}
+
+@media (max-width: 640px) {
+  .image-1 {
+      background-image: url("../images/shop-item-mobile1.jpg");
+  }
+  .image-2 {
+      background-image: url("../images/shop-item-mobile2.jpg");
+  }
+  .image-3 {
+      background-image: url("../images/shop-item-mobile3.jpg");
+  }
 }
